--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -8,8 +8,9 @@
 
     <div class="contenedor2">
         <ul>
-            <li><a href="/loginUser">Iniciar sesion como investigador</a></li>
-            <li><a href="">Iniciar sesion como administrador</a></li>
+            <li><a href="/loginUser">Investigador</a></li>
+            <li><a href="">Administrador</a></li>
+            <li><a href="">Consejos</a></li>
         </ul>
     </div>
 </footer>
