--- a/src/pages/loginUser.astro
+++ b/src/pages/loginUser.astro
@@ -9,7 +9,11 @@ import SignUp from "../components/SignUp.astro";
 
 <Layout title="Investigadores">
     <Main>
-        <Nav text="Home" text2="Galeria" text3="Proyectos" text4="Ambiente"></Nav>
+        <Nav text="https://walstar29.github.io/Portal-Digital/" 
+		text2="https://walstar29.github.io/Portal-Digital/galeria/" 
+		text3="https://walstar29.github.io/Portal-Digital/proyectos/" 
+		text4='https://walstar29.github.io/Portal-Digital/ambiente/'
+		text5='Turismo'></Nav>
         
             <SignUp></SignUp>
             <SignIn></SignIn>
