--- a/src/components/SignIn.astro
+++ b/src/components/SignIn.astro
@@ -18,7 +18,7 @@ import H1 from "../components/Titulos.astro"
                     </div>
 
                     <div class="botones">
-                        <button><a href="/investigador">Entrar</a></button>
+                        <button><a href="/i_home">Entrar</a></button>
                     </div>
                 </div>
             </form>
@@ -27,26 +27,22 @@ import H1 from "../components/Titulos.astro"
 
 <style>
     .SignIn{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
         margin: 0 0 5% 0;
     }
 
     .SignIn form{
         transition: all 900ms;
-        border-radius: 25px;
+        border-radius: 10px;
         background-color: rgb(255, 255, 255, 0.8);
         display: flex;
         flex-direction: column;
         text-align: center;
         width: 100%;
-        margin: 2% 0 0 0;
         padding: 2% 0;
     }
 
     .SignIn form:hover{
-		border-radius: 50px;
+		border-radius: 25px;
 		background-color: rgb(255, 246, 224, 0.8);
 		box-shadow: 0px 10px 60px 0px rgb(0, 0, 0);
 		transition: all 900ms;
@@ -60,7 +56,7 @@ import H1 from "../components/Titulos.astro"
     }
 
     .SignIn form .contenedor .datos{
-        width: 20%;
+        width: 50%;
         display: flex;
         flex-direction: column;
     }
@@ -69,7 +65,8 @@ import H1 from "../components/Titulos.astro"
         margin: 2% 0 5% 0;
         padding: 2%;
         border-radius: 5px;
-        border: solid 2px rgb(0, 0, 0);
+        border: none;
+        border-bottom: solid 2px rgb(0, 0, 0);
     }
 
     .SignIn form .botones{
@@ -81,5 +78,23 @@ import H1 from "../components/Titulos.astro"
         padding: 1% 4%;
         border-radius: 5px;
         border: solid 2px rgb(0, 0, 0);
+    }
+
+    @media(max-width: 900px){
+        .SignIn form .contenedor .datos{
+            width: 80%;
+        }
+
+        .SignIn form .contenedor .datos input{
+            padding: 3% 0 3% 1%;
+        }
+
+        .SignIn form .botones button{
+            margin: 2% 0 0 0;
+            width: 50%;
+            padding: 3% 5%;
+            border-radius: 5px;
+            border: solid 2px rgb(0, 0, 0);
+        }
     }
 </style>
