--- a/src/components/UserInvestigador.astro
+++ b/src/components/UserInvestigador.astro
@@ -6,18 +6,23 @@ interface Props {
 const { user } = Astro.props;
 ---
 
-<div class="user">
-    <h1>Investigador</h1>
-    <h1>Sr/Sra {user} Bienvenido</h1>
+<div class="div">
+    <div class="user">
+        <h1>Investigador</h1>
+        <h1>Sr/Sra {user} Bienvenido</h1>
+    </div>
 </div>
 
 <style>
-    .user{
+    .div{
         width: 100%;
-        padding: 2%;
         display: flex;
         text-align: center;
-        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    .user{
+        padding: 0 2%;
         color: rgb(0, 0, 0);
     }
 </style>
