--- a/src/pages/ambiente.astro
+++ b/src/pages/ambiente.astro
@@ -12,7 +12,11 @@ import Footer from "../layouts/Footer.astro";
 
 <Layout title='Laguna de Punta de Piedras'>
     <Main>
-        <Nav text="Home" text2="Galeria" text3="Proyectos" text4='Ambiente'></Nav>
+        <Nav text="https://walstar29.github.io/Portal-Digital/" 
+		text2="https://walstar29.github.io/Portal-Digital/galeria/" 
+		text3="https://walstar29.github.io/Portal-Digital/proyectos/" 
+		text4='https://walstar29.github.io/Portal-Digital/ambiente/'
+		text5='Turismo'></Nav>
 
         <!-- ContenedorPadre -->
 		<ContenedoresPadres>
