--- a/src/pages/modificarInfo.astro
+++ b/src/pages/modificarInfo.astro
@@ -11,7 +11,11 @@ import Footer from "../layouts/Footer.astro"
 
 <Layout title="Modificar informacion">
     <Main>
-        <Nav text="Home" text2="Galeria" text3="Proyectos" text4="Ambiente"></Nav>
+        <Nav text="https://walstar29.github.io/Portal-Digital/" 
+		text2="https://walstar29.github.io/Portal-Digital/galeria/" 
+		text3="https://walstar29.github.io/Portal-Digital/proyectos/" 
+		text4='https://walstar29.github.io/Portal-Digital/ambiente/'
+		text5='Turismo'></Nav>
 
         <Modificacion></Modificacion>
 
