--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -12,8 +12,12 @@ import Footer from "../layouts/Footer.astro";
 
 <Layout title='Proyectos'>
     <Main>
-		<Nav text="Home" text2="Galeria" text3="Proyectos" text4='Ambiente'></Nav>
-
+		<Nav text="https://walstar29.github.io/Portal-Digital/" 
+		text2="https://walstar29.github.io/Portal-Digital/galeria/" 
+		text3="https://walstar29.github.io/Portal-Digital/proyectos/" 
+		text4='https://walstar29.github.io/Portal-Digital/ambiente/'
+		text5='Turismo'></Nav>
+		
         <!-- ContenedorPadre -->
 		<ContenedoresPadres >
 			<H1 title='Futuros proyectos'></H1>
