enrutamiento del investigador

--- a/src/components/SignIn.astro
+++ b/src/components/SignIn.astro
@@ -18,7 +18,7 @@ import H1 from "../components/Titulos.astro"
                     </div>
 
                     <div class="botones">
-                        <button><a href="/i_home">Entrar</a></button>
+                        <button><a href="https://walstar29.github.io/Portal-Digital/i_home/">Entrar</a></button>
                     </div>
                 </div>
             </form>
