--- a/src/pages/ambiente.astro
+++ b/src/pages/ambiente.astro
@@ -16,7 +16,8 @@ import Footer from "../layouts/Footer.astro";
 		text2="https://walstar29.github.io/Portal-Digital/galeria/" 
 		text3="https://walstar29.github.io/Portal-Digital/proyectos/" 
 		text4='https://walstar29.github.io/Portal-Digital/ambiente/'
-		text5='Turismo'></Nav>
+		text5='Turismo'
+        text6=''></Nav>
 
         <!-- ContenedorPadre -->
 		<ContenedoresPadres>
