--- a/src/pages/i_proyectos.astro
+++ b/src/pages/i_proyectos.astro
@@ -14,12 +14,12 @@ import Botones from '../components/Botones.astro';
 
 <Layout title='Proyectos'>
     <Main>
-		<Nav text="/i_home" 
-		text2="/i_galeria" 
-		text3="/i_proyectos" 
-		text4='/i_ambiente'
+		<Nav text="https://walstar29.github.io/Portal-Digital/i_home/" 
+		text2="https://walstar29.github.io/Portal-Digital/i_galeria/" 
+		text3="https://walstar29.github.io/Portal-Digital/i_proyectos/" 
+		text4='https://walstar29.github.io/Portal-Digital/i_ambiente/'
 		text5='Turismo'
-		text6='/'></Nav>
+		text6='https://walstar29.github.io/Portal-Digital/'></Nav>
 		
 		<User user='Walter Castro'></User>
         <!-- ContenedorPadre -->
