--- a/src/pages/loginUser.astro
+++ b/src/pages/loginUser.astro
@@ -13,7 +13,8 @@ import SignUp from "../components/SignUp.astro";
 		text2="https://walstar29.github.io/Portal-Digital/galeria/" 
 		text3="https://walstar29.github.io/Portal-Digital/proyectos/" 
 		text4='https://walstar29.github.io/Portal-Digital/ambiente/'
-		text5='Turismo'></Nav>
+		text5='Turismo'
+        text6="/"></Nav>
         
             <SignUp></SignUp>
             <SignIn></SignIn>
