--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,8 @@ import Footer from "../layouts/Footer.astro";
 		text2="https://walstar29.github.io/Portal-Digital/galeria/" 
 		text3="https://walstar29.github.io/Portal-Digital/proyectos/" 
 		text4='https://walstar29.github.io/Portal-Digital/ambiente/'
-		text5='Turismo'></Nav>
+		text5='Turismo'
+		text6=''></Nav>
 		
 		<Label text='Punta de Piedras' 
 			text2='Festividades y Tradiciones' 
