--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -8,7 +8,7 @@
 
     <div class="contenedor2">
         <ul>
-            <li><a href="/loginUser">Investigador</a></li>
+            <li><a href="https://walstar29.github.io/Portal-Digital/loginUser/">Investigador</a></li>
             <li><a href="">Administrador</a></li>
             <li><a href="">Consejos</a></li>
         </ul>
