--- a/src/components/SignIn.astro
+++ b/src/components/SignIn.astro
@@ -80,6 +80,11 @@ import H1 from "../components/Titulos.astro"
         border: solid 2px rgb(0, 0, 0);
     }
 
+    .SignIn form .contenedor button a{
+        text-decoration: none;
+        list-style: none;
+    }
+
     @media(max-width: 900px){
         .SignIn form .contenedor .datos{
             width: 80%;
