--- a/src/layouts/Nav.astro
+++ b/src/layouts/Nav.astro
@@ -42,6 +42,7 @@ const { text, text2, text3, text4, text5, text6} = Astro.props;
                 <li><a class="id" href={text4}><i class="fa-solid fa-seedling" style="color: #000000;"></i>AMBIENTE</a></li>
                 <li><a class="id" href={text3}><i class="fa-solid fa-helmet-safety" style="color: #000000;"></i> NUESTRO PROYECTOS</a></li>
                 <li><a href=""><i class="fa-solid fa-umbrella-beach" style="color: #000000;"></i>TURISMO</a></li>
+                <li><a href={text6}>Menu Principal</a></li>
             </ul>
         </div>
 </label>
