--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -8,9 +8,9 @@
 
     <div class="contenedor2">
         <ul>
-            <li><a href="https://walstar29.github.io/Portal-Digital/loginUser/">Investigador</a></li>
-            <li><a href="">Administrador</a></li>
-            <li><a href="">Consejos</a></li>
+            <li><a href="https://walstar29.github.io/Portal-Digital/loginInvestigador/">Investigador</a></li>
+            <li><a href="https://walstar29.github.io/Portal-Digital/loginAdministrador/">Administrador</a></li>
+            <li><a href="https://walstar29.github.io/Portal-Digital/loginConsejales/">Consejos</a></li>
         </ul>
     </div>
 </footer>
