--- a/src/pages/i_ambiente.astro
+++ b/src/pages/i_ambiente.astro
@@ -3,7 +3,6 @@ import Layout from '../layouts/Layout.astro';
 import Main from '../layouts/Main.astro';
 import Nav from '../layouts/Nav.astro';
 import User from '../components/UserInvestigador.astro';
-import Label from '../layouts/NavHorizontal.astro';
 import ContenedoresPadres from "../layouts/ContenedoresPadres.astro";
 import H1 from "../components/Titulos.astro"
 import ContenedorInformacion from "../layouts/Informacion.astro"
@@ -14,12 +13,12 @@ import Botones from '../components/Botones.astro';
 
 <Layout title='Laguna de Punta de Piedras'>
     <Main>
-        <Nav text="https://walstar29.github.io/Portal-Digital/i_home/" 
-		text2="https://walstar29.github.io/Portal-Digital/i_galeria/" 
-		text3="https://walstar29.github.io/Portal-Digital/i_proyectos/" 
-		text4='https://walstar29.github.io/Portal-Digital/i_ambiente/'
-		text5='Turismo'
-		text6='https://walstar29.github.io/Portal-Digital/'></Nav>
+        <Nav enlace="https://walstar29.github.io/Portal-Digital/i_home/" text="Home" icon=' fa-solid fa-house'
+		enlace2="https://walstar29.github.io/Portal-Digital/i_galeria/" text2='Galeria' icon2='fa-solid fa-image'
+		enlace3="https://walstar29.github.io/Portal-Digital/i_proyectos/" text3='Proyectos' icon3='fa-solid fa-seedling'
+		enlace4='https://walstar29.github.io/Portal-Digital/i_ambiente/' text4='Ambientes' icon4='fa-solid fa-helmet-safety'
+		enlace5='' text5='Turismo' icon5='fa-solid fa-umbrella-beach'
+		enlace6='https://walstar29.github.io/Portal-Digital/' text6='Regresar' icon6='fa-solid fa-person-walking-arrow-loop-left'></Nav>
 
         <User user='Walter Castro'></User>
         <!-- ContenedorPadre -->
@@ -58,7 +57,7 @@ import Botones from '../components/Botones.astro';
                     <i class="fa-solid fa-trash" style="color: #000000;"></i>
                 </div>
             </ContenedorInformacion>
-            <Botones text='Registrar'></Botones>
+            <Botones text2='' text='Registrar'></Botones>
         </ContenedoresPadres>
 
         <!-- ContenedorPadre 3 -->
@@ -71,7 +70,7 @@ import Botones from '../components/Botones.astro';
                 </div>
             </ContenedorInformacion>
             
-            <ContenedorInformacion subtitle='- Hábitat:' contexto='Proporciona refugio y áreas de crianza para una gran variedad de especies marinas, incluyendo peces, crustáceos y aves.'>
+            <ContenedorInformacion subtitle='- Hábitat:' contexto='Proporciona refugio y áreas de crianza para una gran varie  dad de especies marinas, incluyendo peces, crustáceos y aves.'>
                 <div class="icon">
                     <a href="/modificarInfo"><i class="fa-solid fa-pen-to-square" style="color: #000000;"></i></a>
                     <i class="fa-solid fa-trash" style="color: #000000;"></i>
@@ -84,7 +83,7 @@ import Botones from '../components/Botones.astro';
                     <i class="fa-solid fa-trash" style="color: #000000;"></i>
                 </div>
             </ContenedorInformacion>
-            <Botones text='Registrar'></Botones>
+            <Botones text2='' text='Registrar'></Botones>
         </ContenedoresPadres>
 
         <!-- ContenedorPadre 4 -->
@@ -103,7 +102,7 @@ import Botones from '../components/Botones.astro';
                     <i class="fa-solid fa-trash" style="color: #000000;"></i>
                 </div>
             </ContenedorInformacion>
-            <Botones text='Registrar'></Botones>
+            <Botones text2='' text='Registrar'></Botones>
         </ContenedoresPadres>
 
         <!-- ContenedorPadre 5 -->
