--- a/src/pages/i_proyectos.astro
+++ b/src/pages/i_proyectos.astro
@@ -14,12 +14,12 @@ import Botones from '../components/Botones.astro';
 
 <Layout title='Proyectos'>
     <Main>
-		<Nav text="https://walstar29.github.io/Portal-Digital/i_home/" 
-		text2="https://walstar29.github.io/Portal-Digital/i_galeria/" 
-		text3="https://walstar29.github.io/Portal-Digital/i_proyectos/" 
-		text4='https://walstar29.github.io/Portal-Digital/i_ambiente/'
-		text5='Turismo'
-		text6='https://walstar29.github.io/Portal-Digital/'></Nav>
+		<Nav enlace="https://walstar29.github.io/Portal-Digital/i_home/" text="Home" icon=' fa-solid fa-house'
+		enlace2="https://walstar29.github.io/Portal-Digital/i_galeria/" text2='Galeria' icon2='fa-solid fa-image'
+		enlace3="https://walstar29.github.io/Portal-Digital/i_proyectos/" text3='Proyectos' icon3='fa-solid fa-seedling'
+		enlace4='https://walstar29.github.io/Portal-Digital/i_ambiente/' text4='Ambientes' icon4='fa-solid fa-helmet-safety'
+		enlace5='' text5='Turismo' icon5='fa-solid fa-umbrella-beach'
+		enlace6='https://walstar29.github.io/Portal-Digital/' text6='Regresar' icon6='fa-solid fa-person-walking-arrow-loop-left'></Nav>
 		
 		<User user='Walter Castro'></User>
         <!-- ContenedorPadre -->
@@ -70,7 +70,7 @@ import Botones from '../components/Botones.astro';
                 </Cartas>
 			</ContenedorCartas>
 
-            <Botones text='Registrar'></Botones>
+            <Botones text2='' text='Registrar'></Botones>
 		</ContenedoresPadres>
 
 		<Footer></Footer>
