--- a/src/pages/galeria.astro
+++ b/src/pages/galeria.astro
@@ -2,23 +2,19 @@
 import Layout from '../layouts/Layout.astro';
 import Main from '../layouts/Main.astro';
 import Nav from '../layouts/Nav.astro';
-import Label from '../layouts/NavHorizontal.astro';
 import ContenedoresPadres from "../layouts/ContenedoresPadres.astro";
 import H1 from "../components/Titulos.astro"
-import ContenedorInformacion from "../layouts/Informacion.astro"
-import ContenedorCartas from "../layouts/ContenedoresCartas.astro"
-import Cartas from "../layouts/CartaInformativa.astro";
 import Footer from "../layouts/Footer.astro";
 ---
 
 <Layout title='Nuestra comunidad'>
     <Main>
-        <Nav text="https://walstar29.github.io/Portal-Digital/" 
-		text2="https://walstar29.github.io/Portal-Digital/galeria/" 
-		text3="https://walstar29.github.io/Portal-Digital/proyectos/" 
-		text4='https://walstar29.github.io/Portal-Digital/ambiente/'
-		text5='Turismo'
-        text6=''></Nav>
+        <Nav enlace="https://walstar29.github.io/Portal-Digital/" text='Home' icon=' fa-solid fa-house'
+		enlace2="https://walstar29.github.io/Portal-Digital/galeria/" text2='Galeria' icon2='fa-solid fa-image'
+		enlace3="https://walstar29.github.io/Portal-Digital/proyectos/" text3='Proyectos' icon3='fa-solid fa-seedling'
+		enlace4='https://walstar29.github.io/Portal-Digital/ambiente/' text4='Ambiente' icon4='fa-solid fa-helmet-safety'
+		enlace5='/Turismo' text5='Turismo' icon5='fa-solid fa-umbrella-beach'
+        enlace6='' text6='' icon6=''></Nav>
 
         <ContenedoresPadres>
             <H1 title='Area de fotografias'></H1>
