--- a/src/pages/i_home.astro
+++ b/src/pages/i_home.astro
@@ -15,12 +15,12 @@ import Botones from '../components/Botones.astro';
 
 <Layout title="Investigador">
     <Main>
-		<Nav text="https://walstar29.github.io/Portal-Digital/i_home/" 
-		text2="https://walstar29.github.io/Portal-Digital/i_galeria/" 
-		text3="https://walstar29.github.io/Portal-Digital/i_proyectos/" 
-		text4='https://walstar29.github.io/Portal-Digital/i_ambiente/'
-		text5='Turismo'
-		text6='https://walstar29.github.io/Portal-Digital/'></Nav>
+		<Nav enlace="https://walstar29.github.io/Portal-Digital/i_home/" text="Home" icon=' fa-solid fa-house'
+		enlace2="https://walstar29.github.io/Portal-Digital/i_galeria/" text2='Galeria' icon2='fa-solid fa-image'
+		enlace3="https://walstar29.github.io/Portal-Digital/i_proyectos/" text3='Proyectos' icon3='fa-solid fa-seedling'
+		enlace4='https://walstar29.github.io/Portal-Digital/i_ambiente/' text4='Ambientes' icon4='fa-solid fa-helmet-safety'
+		enlace5='' text5='Turismo' icon5='fa-solid fa-umbrella-beach'
+		enlace6='https://walstar29.github.io/Portal-Digital/' text6='Regresar' icon6='fa-solid fa-person-walking-arrow-loop-left'></Nav>
 		
         <User user='Walter Castro'></User>
 		<Label text='Nuestro ambiente' 
@@ -104,7 +104,7 @@ import Botones from '../components/Botones.astro';
 				</div>
 			</ContenedorInformacion>
 			
-				<Botones text='Registrar'></Botones>
+				<Botones text2='' text='Registrar'></Botones>
 		</ContenedoresPadres>
 
 		<!-- ContenedorPadre 3 -->
@@ -132,7 +132,7 @@ import Botones from '../components/Botones.astro';
 				</div>
 			</ContenedorInformacion>
 
-			<Botones text='Registrar'></Botones>
+			<Botones text2='' text='Registrar'></Botones>
 		</ContenedoresPadres>
 
 		<!-- ContenedorPadre 4 -->
@@ -174,7 +174,7 @@ import Botones from '../components/Botones.astro';
 				</Cartas>
 			</ContenedorCartas>
 
-			<Botones text='Registrar'></Botones>
+			<Botones text2='' text='Registrar'></Botones>
 		</ContenedoresPadres>
 
 
@@ -217,7 +217,7 @@ import Botones from '../components/Botones.astro';
 				</Cartas>
 			</ContenedorCartas>
 
-			<Botones text='Registrar'></Botones>
+			<Botones text2='' text='Registrar'></Botones>
 		</ContenedoresPadres>
         <Footer></Footer>
     </Main>  
