--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,12 +13,12 @@ import Footer from "../layouts/Footer.astro";
 
 <Layout title="Cuida nuestra isla">
 	<Main>
-		<Nav text="https://walstar29.github.io/Portal-Digital/" 
-		text2="https://walstar29.github.io/Portal-Digital/galeria/" 
-		text3="https://walstar29.github.io/Portal-Digital/proyectos/" 
-		text4='https://walstar29.github.io/Portal-Digital/ambiente/'
-		text5='Turismo'
-		text6=''></Nav>
+		<Nav enlace="https://walstar29.github.io/Portal-Digital/" text='Home' icon=' fa-solid fa-house'
+		enlace2="https://walstar29.github.io/Portal-Digital/galeria/" text2='Galeria' icon2='fa-solid fa-image'
+		enlace3="https://walstar29.github.io/Portal-Digital/proyectos/" text3='Proyectos' icon3='fa-solid fa-seedling'
+		enlace4='https://walstar29.github.io/Portal-Digital/ambiente/' text4='Ambiente' icon4='fa-solid fa-helmet-safety'
+		enlace5='/Turismo' text5='Turismo' icon5='fa-solid fa-umbrella-beach'
+        enlace6='' text6='' icon6=''></Nav>
 		
 		<Label text='Punta de Piedras' 
 			text2='Festividades y Tradiciones' 
@@ -83,7 +83,7 @@ import Footer from "../layouts/Footer.astro";
 				<img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/FestividadesyTradiciones/Turismo.jpg?raw=true" alt="">
 			</ContenedorInformacion>
 		</ContenedoresPadres>
-
+		
 		<!-- ContenedorPadre 4 -->
 		<ContenedoresPadres>
 			<div id="Faunas">
