ajuste de enlaces

--- a/src/pages/loginAdministrador.astro
+++ b/src/pages/loginAdministrador.astro
@@ -15,7 +15,7 @@ import SignIn from "../components/SignIn.astro";
 		enlace5='/Turismo' text5='Turismo' icon5='fa-solid fa-umbrella-beach'
         enlace6='' text6='' icon6=''></Nav>
 
-            <SignIn text="/adminInvestigadores"></SignIn>
+            <SignIn text="https://walstar29.github.io/Portal-Digital/adminInvestigadores/"></SignIn>
             
         <Footer></Footer>
     </Main>
