--- a/src/pages/loginConsejales.astro
+++ b/src/pages/loginConsejales.astro
@@ -17,7 +17,7 @@ import SignUp from "../components/SignUp.astro";
         enlace6='' text6='' icon6=''></Nav>
         
             <SignUp></SignUp>
-            <SignIn text="/adminConsejales"></SignIn>
+            <SignIn text="https://walstar29.github.io/Portal-Digital/adminConsejales/"></SignIn>
             
         <Footer></Footer>
     </Main>
