--- a/src/pages/loginInvestigador.astro
+++ b/src/pages/loginInvestigador.astro
@@ -17,7 +17,7 @@ import SignUp from "../components/SignUp.astro";
         enlace6='' text6='' icon6=''></Nav>
         
             <SignUp></SignUp>
-            <SignIn text="/i_home"></SignIn>
+            <SignIn text="https://walstar29.github.io/Portal-Digital/i_home/"></SignIn>
             
         <Footer></Footer>
     </Main>
